css/style.css
/* ... */
.dark-mode .contact-section a {
  color: #b0aac0;
}
.dark-mode .contact-section a:hover {
  color: #44cbe1;
}
.dark-mode .contact-section .form-control {
  border-color: #606060;
  background: #2a2a2a;
}
.dark-mode .contact-section .form-control:focus {
  border-color: #44cbe1;
}
/***********************************************************
  16. Site Footer
************************************************************/
.site-footer {
  background-color: #2e313e;
  background: url('../image/footer-bg.jpg') no-repeat center center;
  background-size: cover;
  padding-top: 90px;
  padding-bottom: 60px;
  position: relative;
  z-index: 1;
}
.site-footer:after {
  content: '';
  position: absolute;
  top: 0;
  left: 0;
  bottom: 0;
  right: 0;
  background: rgba(0, 0, 0, 0.7);
  z-index: -1;
}
.site-footer .container {
  position: relative;
}
.site-footer h3 {
  color: #fff;
  font-size: 21px;
  margin-bottom: 30px;
}
.site-footer p {
  color: #b0aac0;
}
.site-footer input {
  padding-left: 24px;
  padding-right: 24px;
}
.site-footer input:focus {
  border-color: #44cbe1;
  box-shadow: none;
}
.site-footer .footer-brand {
  margin-bottom: 36px;
  display: inline-block;
}
.site-footer .footer-brand img {
  width: 148px;
}
.site-footer .footer-social {
  margin-top: 48px;
}
.site-footer .footer-social li {
  margin-right: 24px;
}
.site-footer .footer-social li:last-child {
  margin-right: 0;
}
.site-footer .footer-social a {
  color: #fff;
  transition: 0.3s;
  font-size: 24px;
  display: inline-block;
}
.site-footer .footer-social a:hover {
  color: #44cbe1;
  transform: translateY(-5px);
}
.site-footer .back-to-top {
  position: absolute;
  top: -120px;
  right: var(--bs-gutter-x, 0.75rem);
}
.site-footer .back-to-top a {
  width: 60px;
  height: 60px;
  background: #44cbe1;
  text-align: center;
  line-height: 60px;
  font-size: 24px;
  color: #fff;
  transition: 0.3s;
  border-radius: 50%;
  display: inline-block;
}
.site-footer .footer-bottom {
  margin-top: 78px;
}
.site-footer .footer-bottom p {
  font-size: 16px;
}
.site-footer .footer-bottom ul {
  margin-bottom: 0;
}
.site-footer .footer-bottom ul a {
  font-family: 'Open Sans', sans-serif;
  color: #b0aac0;
  text-transform: capitalize;
  font-size: 16px;
}

#site-footer .footer-bottom{
  justify-content:center;
  align-items:center;
  position:relative;
  left:127px;
 }


/***********************************************************
  17. Libraries
************************************************************/
/* PRE LOADER */
.flex-center {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  justify-content: center;
}
.preloader {
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background: #222;
  z-index: 10000;
}
.dots .dot {
  display: inline-block;
  width: 35px;
  height: 35px;
  margin: 0 10px 0 10px;
  border-radius: 50%;
  background: #FFF;
  -webkit-animation: dot-dot-dot 1.4s linear infinite;
  animation: dot-dot-dot 1.4s linear infinite;
}
.dots .dot:nth-child(2) {
  animation-delay: 0.2s;
}
.dots .dot:nth-child(3) {
  animation-delay: 0.4s;
}

/* Span Tag */
.branding-block .bottom-head span{
  font-size:30px;
  color:#ffffff;
  font-weight:700;
  font-family:'Helvetica Neue',Helvetica,Arial,sans-serif;
 }

 /* Font Icon */
 .branding-block .bottom-head i{
  font-size:30px;
 }



@keyframes dot-dot-dot {
  0%,
  60%,
  100% {
    -webkit-transform: initial;
    -ms-transform: initial;
    transform: initial;
  }
  30% {
    -webkit-transform: translateY(-25px);
    -ms-transform: translateY(-25px);
    transform: translateY(-25px);
  }
}
/* swiper */
.swiper {
  width: 100%;
  height: 420px;
}
.swiper .swiper-pagination-bullet {
  background: #ffffff;
  opacity: 0.5;
  width: 8px;
  height: 8px;
}
.swiper .swiper-pagination-bullet.swiper-pagination-bullet-active {
  background: #44cbe1;
  opacity: 1;
}
.partnerCarousel {
  overflow: hidden;
  width: 100%;
}
/***********************************************************
  18. Media Queries
************************************************************/
/* max-width: 1599px and min-width:992px */
@media (max-width: 1599px) and (min-width: 992px) {
  .hero-area .hero-head {
    font-size: 90px;
  }
}
/* max-width: 1599px and min-width:1200px */
@media (max-width: 1599px) and (min-width: 1200px) {
  .hero-area .image-wrapper:after {
    width: 380px;
    height: 300px;
    top: 60px;
    right: -10px;
  }
  .hero-area .image-wrapper img {
    width: 66%;
  }
  .hero-area .hero-facts li {
    padding: 16px;
  }
  .hero-area .hero-facts li:first-child {
    left: 96px;
  }
  .hero-area .hero-facts li:nth-child(2) {
    right: -90px;
  }
  .hero-area .hero-facts li p {
    font-size: 36px;
  }
  .hero-area .hero-facts li h4 {
    font-size: 15px;
  }
  .about-section .img-wrapper:before {
    left: 24px;
  }
  .service-section .content-wrapper {
    padding: 48px 36px;
  }
  .testimonial-section .swiper {
    height: 480px;
  }
}
/* Max-width: 1599px and Min-width: 1400px */
@media (max-width: 1599px) and (min-width: 1400px) {
  .hero-area .de-hero-1 {
    left: 1%;
    top: 16%;
  }
  .hero-area .de-hero-2 {
    right: 3%;
  }
  .hero-area .de-hero-3 {
    right: 2%;
  }
  .hero-area .de-hero-5 {
    bottom: 12%;
  }
}
/* Max-width: 1399px */
@media (max-width: 1599px) {
  .service-section .de-service-1,
  .service-section .de-service-2 {
    display: none;
  }
  .blog-section .de-blog-2 {
    bottom: 5%;
  }
  .contact-section .de-contact-1 {
    top: 12%;
  }
}
/* ... */

